<resources>
    <string name="app_name">Converter</string>
    <string name="clear"><![CDATA[<-]]></string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="ac">AC</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="dot">.</string>
    <string-array name="units">
        <item>Inch</item>
        <item>Centimeter</item>
        <item>Foot</item>
        <item>Yard</item>
        <item>Meter</item>
        <item>Mile</item>
        <item>Kilometer</item>
    </string-array>
</resources>
