<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/nine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/button_drawable"
        android:contentDescription="@string/_9"
        android:gravity="center"
        android:onClick="buttonClick"
        android:text="@string/_9"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/six"
        app:layout_constraintEnd_toStartOf="@+id/clearbtn"
        app:layout_constraintStart_toEndOf="@+id/two"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/eight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/button_drawable"
        android:contentDescription="@string/_8"
        android:gravity="center"
        android:onClick="buttonClick"
        android:text="@string/_8"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/five"
        app:layout_constraintEnd_toStartOf="@+id/three"
        app:layout_constraintStart_toEndOf="@+id/one"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/seven"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/button_drawable"
        android:contentDescription="@string/_7"
        android:gravity="center"
        android:onClick="buttonClick"
        android:text="@string/_7"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/four"
        app:layout_constraintEnd_toStartOf="@+id/two"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/clearAllbtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/button_drawable"
        android:onClick="buttonClick"
        android:text="@string/ac"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/clearbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nine"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.318" />

    <Button
        android:id="@+id/four"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/button_drawable"
        android:contentDescription="@string/_4"
        android:gravity="center"
        android:onClick="buttonClick"
        android:text="@string/_4"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/one"
        app:layout_constraintEnd_toStartOf="@+id/two"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seven" />

    <Button
        android:id="@+id/five"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/button_drawable"
        android:contentDescription="@string/_5"
        android:gravity="center"
        android:onClick="buttonClick"
        android:text="@string/_5"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/two"
        app:layout_constraintEnd_toStartOf="@+id/three"
        app:layout_constraintStart_toEndOf="@+id/one"
        app:layout_constraintTop_toBottomOf="@+id/eight" />

    <Button
        android:id="@+id/six"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/button_drawable"
        android:contentDescription="@string/_6"
        android:gravity="center"
        android:onClick="buttonClick"
        android:text="@string/_6"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/three"
        app:layout_constraintEnd_toStartOf="@+id/clearbtn"
        app:layout_constraintStart_toEndOf="@+id/two"
        app:layout_constraintTop_toBottomOf="@+id/nine" />

    <Button
        android:id="@+id/three"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/button_drawable"
        android:contentDescription="@string/_3"
        android:gravity="center"
        android:onClick="buttonClick"
        android:text="@string/_3"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/dotbtn"
        app:layout_constraintEnd_toStartOf="@+id/clearbtn"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/two"
        app:layout_constraintTop_toBottomOf="@+id/six" />

    <Button
        android:id="@+id/two"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/button_drawable"
        android:contentDescription="@string/_2"
        android:gravity="center"
        android:onClick="buttonClick"
        android:text="@string/_2"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/zero"
        app:layout_constraintEnd_toStartOf="@+id/three"
        app:layout_constraintStart_toEndOf="@+id/one"
        app:layout_constraintTop_toBottomOf="@+id/five" />

    <Button
        android:id="@+id/one"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/button_drawable"
        android:contentDescription="@string/_1"
        android:gravity="center"
        android:onClick="buttonClick"
        android:text="@string/_1"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/zero"
        app:layout_constraintEnd_toStartOf="@+id/two"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/four" />

    <Button
        android:id="@+id/clearbtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/button_drawable"
        android:onClick="buttonClick"
        android:text="@string/clear"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dotbtn"
        app:layout_constraintTop_toBottomOf="@+id/clearAllbtn" />

    <Button
        android:id="@+id/zero"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/button_drawable"
        android:contentDescription="@string/_0"
        android:onClick="buttonClick"
        android:text="@string/_0"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dotbtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/two" />

    <GridLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/outputNum"
            android:layout_width="169dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="2"
            android:enabled="true"
            android:focusable="false"
            android:cursorVisible="false"
            android:gravity="right"
            android:inputType="numberDecimal"
            tools:textSize="30sp" />

        <Spinner
            android:id="@+id/inputFactor"
            android:layout_width="wrap_content"
            android:layout_height="63dp"
            android:layout_row="0"
            android:layout_column="0"
            android:spinnerMode="dialog" />

        <Spinner
            android:id="@+id/outputFactor"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_row="1"
            android:layout_column="0"
            android:spinnerMode="dialog" />

        <EditText
            android:id="@+id/inputNum"
            android:layout_width="169dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="2"
            android:enabled="true"
            android:focusable="false"
            android:cursorVisible="false"
            android:gravity="right"
            android:hint="@string/_0"
            android:inputType="numberDecimal"
            tools:ems="10"
            tools:textSize="30sp" />

    </GridLayout>

    <Button
        android:id="@+id/dotbtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/button_drawable"
        android:gravity="center"
        android:onClick="buttonClick"
        android:text="@string/dot"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/clearbtn"
        app:layout_constraintStart_toEndOf="@+id/zero"
        app:layout_constraintTop_toBottomOf="@+id/three" />
</android.support.constraint.ConstraintLayout>